Added: min_max sensors to record minimum and maximum recorded temperatures from all temp sensors Added: Dynamic colouring of graphs now works using the min/max/mean as the scale for colours Added: Colours values now come from input_text helpers Removed: Old colour values removed from GlobalVariables (didn't work reliably)

--- a/includes/sensors.yaml
+++ b/includes/sensors.yaml
@@ -263,3 +263,36 @@
             {% set mm_per_pulse = 1.25 %}
             {% set mm = count * mm_per_pulse %}
             {{ mm|round(1, 'floor') }}
+- platform: min_max
+  type: min
+  name: all_temps_min
+  entity_ids:
+    - sensor.bed1_temperature
+    - sensor.seb_temperature
+    - sensor.reu_d1_temperature
+    - sensor.bathroom_temperature
+    - sensor.ensuite_temperature
+    - sensor.living_room_temp
+- platform: min_max
+  type: max
+  name: all_temps_max
+  entity_ids:
+    - sensor.bed1_temperature
+    - sensor.seb_temperature
+    - sensor.reu_d1_temperature
+    - sensor.bathroom_temperature
+    - sensor.ensuite_temperature
+    - sensor.living_room_temp
+- platform: statistics
+  name: temps_min_stats
+  entity_id: sensor.all_temps_min
+  sampling_size: 1000
+  max_age:
+    hours: 24
+- platform: statistics
+  name: temps_max_stats
+  entity_id: sensor.all_temps_max
+  sampling_size: 1000
+  max_age:
+    hours: 24
+  
