Added: New min_max sensor to store max value of pm2.5 entity Changed: Y-axis of PM2.5 graph shows max recorded value, capped at 300

--- a/includes/sensors.yaml
+++ b/includes/sensors.yaml
@@ -311,4 +311,9 @@
   sampling_size: 1000
   max_age:
     hours: 24
+- platform: min_max
+  type: max
+  name: pm2_5_max
+  entity_ids:
+    - sensor.air_quality_pm2_5  
   
