--- a/includes/sensors.yaml
+++ b/includes/sensors.yaml
@@ -311,9 +311,10 @@
   sampling_size: 1000
   max_age:
     hours: 24
-- platform: min_max
-  type: max
+- platform: statistics
+  sampling_size: 1000
+  max_age:
+    hours: 24
   name: pm2_5_max
-  entity_ids:
-    - sensor.air_quality_pm2_5  
+  entity_id: sensor.air_quality_pm2_5  
   
