--- a/esphome/air-quality.yaml
+++ b/esphome/air-quality.yaml
@@ -26,10 +26,6 @@ wifi:
     password: !secret wifi_password
     
 captive_portal:
-
-external_components:
-  - source: github://sermayoral/esphome@pm1006
-    components: [ pm1006 ]
     
 i2c:
   sda: D3
@@ -43,6 +39,8 @@ sensor:
   - platform: pm1006
     pm_2_5:
       name: "${friendly_name} PM2.5"
+      filters:
+        throttle: 30s
       
   - platform: bmp280
     address: 0x76
