Changed: Renamed some esphome devices to switch from _ to - in device names (and updated corresponing lovelace config where necessary)

--- a/esphome/tagreader-seb.yaml
+++ b/esphome/tagreader-seb.yaml
@@ -14,7 +14,7 @@ wifi:
 captive_portal:
 
 substitutions:
-  devicename: tagreader_seb
+  devicename: tagreader-seb
   friendly_name: TagReaderSeb
 
 esphome:
