--- a/esphome/tagreader-reu.yaml
+++ b/esphome/tagreader-reu.yaml
@@ -6,7 +6,7 @@ wifi:
     - ssid: !secret wifi_ssid
       password: !secret wifi_password
   domain: ".lan"
-  
+
   manual_ip:
     static_ip: 192.168.1.110
     gateway: 192.168.1.254
@@ -19,8 +19,8 @@ wifi:
 captive_portal:
 
 substitutions:
-  devicename: tagreader
-  friendly_name: TagReader
+  devicename: tagreader-reu
+  friendly_name: TagReaderReu
 
 esphome:
   name: $devicename
