Added: Nest integration

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -21,6 +21,7 @@ group: !include groups.yaml
 http: !include includes/http.yaml
 light: !include includes/light_groups.yaml
 neato: !include includes/neato.yaml
+nest: !include includes/nest.yaml
 notify: !include includes/notify.yaml
 octoprint: !include includes/octoprint.yaml
 plant: !include includes/plant.yaml
