--- a/esphome/tagreader-seb.yaml
+++ b/esphome/tagreader-seb.yaml
@@ -1,4 +1,3 @@
-# Insert your SSID and Your PWD after inital setup
 wifi:
   networks:
     - ssid: !secret wifi_iot_ssid
@@ -123,8 +122,8 @@ light:
 - platform: fastled_clockless
   chipset: WS2812
   pin: D8
-  default_transition_length: 10ms
   num_leds: 1
+  flash_transition_length: 500ms
   rgb_order: GRB
   id: activity_led
   name: "${friendly_name} LED"
