--- a/automations.yaml
+++ b/automations.yaml
@@ -1509,7 +1509,10 @@
   - platform: template
     value_template: '{{ now().hour * 3600 + now().minute * 60 >= state_attr(''input_datetime.boys_wakeup'',''timestamp'')
       - 600 }}'
-  condition: []
+  condition:
+  - condition: state
+    entity_id: binary_sensor.workday_sensor
+    state: 'on'
   action:
   - service: light.turn_on
     data:
@@ -1732,3 +1735,27 @@
       light_target_9: sensor.do_nothing
       replay_sensor_10: sensor.do_nothing
       light_target_10: sensor.do_nothing
+- id: '1636562395777'
+  alias: 'Light: Window light percentage'
+  description: Illuminate a percentage of the light bar according to elapsed minutes
+    of the day
+  trigger:
+  - platform: time_pattern
+    minutes: /5
+  condition:
+  - condition: device
+    type: is_on
+    device_id: 15c7c1209eca0c917609946d19b62db6
+    entity_id: light.window1
+    domain: light
+  action:
+  - service: wled.effect
+    target:
+      entity_id: light.window1
+    data:
+      effect: percent
+      palette: temperature
+      intensity: '{{ (100 * ((as_timestamp(now()) | timestamp_custom("%-H") | int
+        * 60) + as_timestamp(now()) | timestamp_custom("%-M") | int) / 1440 )| round
+        }}'
+  mode: single
