--- a/includes/binary_sensors.yaml
+++ b/includes/binary_sensors.yaml
@@ -26,4 +26,6 @@
     show_commute_home:
       friendly_name: Display card between 16:00 and 18:00.
       value_template: >
-         {{ 16 <= now().hour < 18 }}           
+         {{ 16 <= now().hour < 18 }}
+- platform: workday
+  country: GB
