--- a/esphome/esp32-epaper.yaml
+++ b/esphome/esp32-epaper.yaml
@@ -1,5 +1,5 @@
 esphome:
-  name: esp32_epaper
+  name: esp32-epaper
   platform: ESP32
   board: esp32dev
   on_boot:
@@ -39,7 +39,7 @@ wifi:
   ssid: !secret wifi_iot_ssid
   password: !secret wifi_password
   domain: ".lan"
-  
+  use_address: esp32_epaper
   manual_ip:
     static_ip: 192.168.1.195
     gateway: 192.168.1.254
