Updated target devices to use AL's new phone

--- a/includes/notify.yaml
+++ b/includes/notify.yaml
@@ -7,5 +7,5 @@
 - name: tom_and_anna
   platform: group
   services:
-    - service: mobile_app_moto_g_5g_plus
+    - service: mobile_app_pixel_4a
     - service: mobile_app_in2013
