Added: New diagnostic sensors to ESPHome devices

--- a/esphome/air-quality.yaml
+++ b/esphome/air-quality.yaml
@@ -19,7 +19,7 @@ wifi:
   ssid: !secret wifi_iot_ssid
   password: !secret wifi_password
   domain: ".lan"
-
+  
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
     ssid: "${friendly_name} AP"
@@ -50,3 +50,18 @@ sensor:
     pressure:
       name: "${friendly_name} Pressure"
     update_interval: 60s
+  
+text_sensor:
+  - platform: version
+    hide_timestamp: true
+    name: "${friendly_name} ESPHome Version"
+    entity_category: diagnostic
+  - platform: wifi_info
+    ip_address:
+      name: "${friendly_name} IP Address"
+      icon: mdi:wifi
+      entity_category: diagnostic
+    ssid:
+      name: "${friendly_name} Connected SSID"
+      icon: mdi:wifi-strength-2
+      entity_category: diagnostic
