--- a/esphome/d1mini_motion_seb.yaml
+++ b/esphome/d1mini_motion_seb.yaml
@@ -51,3 +51,18 @@ binary_sensor:
     device_class: motion
   - platform: status
     name: "${friendly_name}  Status"
+
+text_sensor:
+  - platform: version
+    hide_timestamp: true
+    name: "${friendly_name} ESPHome Version"
+    entity_category: diagnostic
+  - platform: wifi_info
+    ip_address:
+      name: "${friendly_name} IP Address"
+      icon: mdi:wifi
+      entity_category: diagnostic
+    ssid:
+      name: "${friendly_name} Connected SSID"
+      icon: mdi:wifi-strength-2
+      entity_category: diagnostic
