--- a/esphome/sensor_d1mini_dht22_bed1.yaml
+++ b/esphome/sensor_d1mini_dht22_bed1.yaml
@@ -35,7 +35,22 @@ sensor:
     pin: VCC
     name: "Bed1 Voltage"
     update_interval: 600s
-    
+
+text_sensor:
+  - platform: version
+    hide_timestamp: true
+    name: "${friendly_name} ESPHome Version"
+    entity_category: diagnostic
+  - platform: wifi_info
+    ip_address:
+      name: "${friendly_name} IP Address"
+      icon: mdi:wifi
+      entity_category: diagnostic
+    ssid:
+      name: "${friendly_name} Connected SSID"
+      icon: mdi:wifi-strength-2
+      entity_category: diagnostic
+         
 binary_sensor:
   - platform: status
     name: "${friendly_name} Status"
