Updated: renamed AD light Updated: Fixed wled percentage automation to use number.set_value since removal of wled.effect

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -25,6 +25,7 @@ nest: !include includes/nest.yaml
 notify: !include includes/notify.yaml
 plant: !include includes/plant.yaml
 recorder: !include includes/recorder.yaml
+rest_command: !include includes/rest.yaml
 script: !include scripts.yaml
 sensor: !include includes/sensors.yaml
 zone: !include zones.yaml
