--- a/groups.yaml
+++ b/groups.yaml
@@ -20,7 +20,7 @@ all_my_lights:
     - light.sebs_lamp
     - light.second_bedroom_light
     - light.desk
-    - light.anna_s_desk
+    - light.anna
     
 room_living:
   name: 'Living Room'
